--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	},
 	"scripts": {
 		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-		"build": "webpack"
+		"watch": "webpack --watch",
+    "build": "webpack"
 	},
 	"author": "",
 	"license": "ISC",
