--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
 	"version": "1.0.0",
 	"description": "Battleship project from TOP curriculum",
 	"main": "index.js",
-	"type": "module",
 	"jest": {
 		"transform": {}
 	},
 	"scripts": {
 		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
 		"watch": "webpack --watch",
-    "build": "webpack"
+		"start": "webpack-dev-server --config webpack.dev.js --open",
+		"build": "webpack --config webpack.prod.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"css-loader": "^6.10.0",
+		"html-webpack-plugin": "^5.6.0",
 		"jest": "^29.7.0",
+		"style-loader": "^3.3.4",
 		"webpack": "^5.90.3",
-		"webpack-cli": "^5.1.4"
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.2",
+		"webpack-merge": "^5.10.0"
 	},
 	"dependencies": {
 		"node": "^21.6.2"
